--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nx-monorepo-sample/source": "file:",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -18,6 +19,7 @@
     "@nx/js": "19.7.3",
     "@nx/next": "19.7.3",
     "@nx/workspace": "19.7.3",
+    "@nxlv/python": "^19.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
